Fixed z-indexing on gallery

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -423,14 +423,14 @@ input[type="submit"]:disabled{
     top: 0;
     left: 0;
     display: none;
-    z-index: 3;
+    z-index: 4;
 }
 #gallery .close{
     position: absolute;
     top: 20px;
     right: 20px;
     width: 30px;
-    z-index: 5;
+    z-index: 6;
 }
 #gallery .close:hover{
     cursor: pointer;
